@@ -1,3 +1,8 @@
+2009-04-13  Sanel <karijes@users.sourceforge.net>
+
+	* m4/jam.m4: check if we have broken jam's that does not correctly use
+	return statement
+
 2009-04-12  Sanel <karijes@users.sourceforge.net>
 
 	* all: fixed some warnings generated by gcc's (>=4.3)
